Update profiles and add Rest
