# Server/Auth/User.py
@@ -5,14 +5,10 @@ class User(UserMixin):
         if user_json is None:
             self.username = None
             self.password = None
-            self.firstName = None
-            self.secondName = None
             self.salt = None
         else:
             self.username = user_json.get('username')
             self.password = user_json.get('password')
-            self.firstName = user_json.get('firstName')
-            self.lastName = user_json.get('lastName')
             self.salt = user_json.get('salt')
 
     def get_id(self):
