# Server/Auth/service.py
@@ -1,5 +1,6 @@
 from .DBAuthHandler import getSalt, getUser, createUser
 from .User import User
+from .Profile import Profile
 from flask import make_response
 from flask_login import login_required, login_user, current_user, logout_user
 import bcrypt
@@ -14,12 +15,10 @@ def salt(username):
 def login(body):
     username = body.get('username')
     password = body.get('password')
-
     user = getUser(username)
-
     if user is not None and bcrypt.checkpw(password.encode(), user.password):
         login_user(user, remember=True)
-        return make_response('', 200)
+        return make_response(f'{username}', 200)
     return make_response('Login failed', 401)
 
 
@@ -28,6 +27,7 @@ def register(body):
     password = body.get('password')
     firstName = body.get('firstName')
     lastName = body.get('lastName')
+    
     salt = body.get('salt')
     if getUser(username).username is not None:
         return make_response({"Message" :'Username already in use'}, 400)
@@ -37,17 +37,12 @@ def register(body):
     hashed = bcrypt.hashpw(password.encode(), passwordSalt)
     user = {"username" : username,
             "password" : hashed,
-            "firstName" : firstName,
-            "lastName" : lastName,
             "salt" : salt}
-    createUser(User(user))
+
+    createUser(User(user), Profile(username, firstName, lastName))
+
     return make_response({"Message" : 'Registration successful'}, 200)
 
-@login_required
-def getMyData ():
-    username = current_user.username
-    response = getUser(username).toDictionary()
-    return make_response(response, 200)
 
 @login_required
 def logout():
