# Server/Profile/Profile.py
@@ -1,21 +1,24 @@
-class Profil():
-    def __init__(self, username, name = None, age = None, bio = None):
+class Profile():
+    def __init__(self, username, firstName = None, lastName = None, age = None, bio = None, imageUrl = None, phone = None):
         if username is None:
             return None
-        if age is None:
+        if firstName is None:
             dict = username
-            self.username = dict.get('username')
-            self.name = dict.get('name')
-            self.age = dict.get('age')
-            self.bio = dict.get('bio')
+            self.username = dict.get('username', {})
+            self.firstName = dict.get('firstName', {})
+            self.lastName = dict.get('lastName', {})
+            self.age = dict.get('age', {})
+            self.bio = dict.get('bio', {})
+            self.imageUrl = dict.get('imageUrl', {})
+            self.phone = dict.get('phone', {})
         else:
             self.username = username
-            self.name = name
+            self.firstName = firstName
+            self.lastName = lastName     
             self.age = age
             self.bio = bio
+            self.imageUrl = imageUrl
+            self.phone = phone
 
     def toDictionary(self):
         return self.__dict__
-
-    def __str__(self):
-        return f"Profil: Username:[{self.username}], name:[{self.name}], age:[{self.age}], bio:[{self.bio}],"
